SNIFL_CFILES = snifl/v4.c \
snifl/udp.c \
snifl/tcp.c \
snifl/sock.c \
snifl/mgr.c \
snifl/dns.c \
snifl/jTree.c \
snifl/tunl.c

SNIFL_HFILES = snifl/v4.h \
snifl/udp.h \
snifl/tcp.h \
snifl/sock.h \
snifl/mgr.h \
snifl/dns.h \
snifl/jTree.h \
snifl/tunl.h

DEMO_CFILES = demo/tun_tap.c \
demo/http.c \
demo/demo.c

DEMO_HFILES = demo/tun_tap.h \
demo/http.h

bin_PROGRAMS = snifl-demo

snifl_demo_SOURCES = $(SNIFL_CFILES) $(DEMO_CFILES) $(SNIFL_HFILES) $(DEMO_HFILES)
